# minesweeper

./: CMakeLists.txt  README.md  rv_linker.lds
include/: board.h  color.h  device.h  display.h  draw.h  font16x16.h  graphics.h  mouse.h  random.h  sanae.h  sdl_interface.h
resources/: convert.sh  output_with_header.txt
src/: board.c  board.h  device.c  display.c  draw.c  font16x16.c  graphics.c  main.c  mouse.c  random.c  sanae.c  sdl_interface.c
